--- a/lubuntu.powerpc.14.04.config
+++ b/lubuntu.powerpc.14.04.config
@@ -11,7 +11,27 @@ append="video=radeonfb:1024x786-32@60"
 
 Then run: sudo ybin
 
-And reboot.
+Reboot and test.
+
+3) Run these Terminal commands:
+
+sudo apt-get update
+
+sudo apt-get install xfce4 lxde lxde-common lxde-core
+
+Reboot and test desktop.
+
+4)
+
+sudo apt-get install git  
+
+git clone https://github.com/MarkRijckenberg/shell-scripts.git
+
+cd shell-scripts
+
+./restore-packagelist.sh
+
+Reboot and test.
 
 Sources:
 
