--- a/lubuntu.powerpc.14.04.config
+++ b/lubuntu.powerpc.14.04.config
@@ -1,5 +1,5 @@
-How to install Lubuntu 14.04 on iBook G4 PowerPC laptop
-=======================================================
+How to install Lubuntu 14.04 LTS on iBook G4 PowerPC laptop
+============================================================
 
 1) First install the following minimal iso image using a wired Internet connection:
 
