--- a/lubuntu.powerpc.14.04.config
+++ b/lubuntu.powerpc.14.04.config
@@ -29,7 +29,7 @@ git clone https://github.com/MarkRijckenberg/shell-scripts.git
 
 cd shell-scripts
 
-./restore-packagelist.sh
+./restore-packagelist.bash
 
 Reboot and test.
 
